# fluidbgoperator

./: .dockerignore  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  FluidBGOperator.sln  IMPLEMENTATION_PLAN.md  LICENSE  PLUGIN.md  README.md  SECURITY.md  docker-bake.hcl  justfile
.github/workflows/: ci-cd.yaml  ci.yaml  docs.yaml  e2e.yaml  release.yaml
FluidBGOperator/: Dockerfile
builtin-plugins/: http.yaml  http_proxy.yaml  http_writer.yaml  rabbitmq.yaml  rabbitmq_duplicator.yaml  rabbitmq_writer.yaml
charts/fluidbg-operator/: Chart.yaml  README.md  values.schema.json  values.yaml
charts/fluidbg-operator/crds/: blue_green_deployment.yaml  inception_plugin.yaml
charts/fluidbg-operator/templates/: _helpers.tpl  auth-secret.yaml  builtin-plugins.yaml  deployment.yaml  managed-secrets.yaml  plugin-managers.yaml  rbac.yaml  service.yaml  serviceaccount.yaml
crds/: blue_green_deployment.yaml  inception_plugin.yaml  state_store.yaml
deploy/: operator.yaml  rbac.yaml
docs/: _config.yml  getting-started.md  index.md
docs/_includes/: custom-head.html
docs/_layouts/: default.html
docs/development/: development.md  implementation-plan.md
docs/examples/: sequential-bgd.md
docs/operations/: helm.md  release.md
docs/project/: changelog.md  contributing.md  security.md
docs/reference/: architecture.md  crds.md  plugin-architecture.md  plugin-interface.md  sdk-spec.md  sdk.md
docs/reference/plugins/: azure-servicebus.md  http.md  index.md  rabbitmq.md
docs/testing/: e2e.md
e2e/: Cargo.toml  run-test.sh
e2e/blue-app/: app.py
e2e/deploy/: 01-httpbin.yaml  01-rabbitmq.yaml  02-bgd-crd.yaml  02-inceptionplugin-crd.yaml  03-operator.yaml  04-sample-app.yaml  05-bgd.yaml  05-bootstrap-bgd.yaml  06-upgrade-bgd.yaml  07-failing-upgrade-bgd.yaml  08-progressive-unsupported.yaml  09-progressive-upgrade-bgd.yaml  10-http-plugin-bgd.yaml  11-force-delete-bgd.yaml
e2e/deploy/bootstrap/: bgd.yaml
e2e/deploy/force-delete/: bgd.yaml
e2e/deploy/force-replace/: initial.yaml  replacement.yaml
e2e/deploy/http-proxy/: bgd.yaml
e2e/deploy/infra/: postgres.yaml  rabbitmq.yaml
e2e/deploy/progressive-splitter/: bgd.yaml
e2e/deploy/progressive-unsupported/: bgd.yaml
e2e/deploy/rabbitmq-promotion/: bgd.yaml
e2e/deploy/rollback-shadow-recovery/: bgd.yaml
e2e/green-app/: Dockerfile  app.py
e2e/src/: command.rs  config.rs  harness.rs  kube.rs  lib.rs  rabbitmq.rs  status.rs
e2e/src/scenarios/: bootstrap.rs  force_delete.rs  force_replace.rs  helm_cleanup.rs  http_proxy.rs  mod.rs  namespace_deletion.rs  progressive_splitter.rs  progressive_unsupported.rs  rabbitmq_promotion.rs  rollback_shadow_recovery.rs  support.rs
e2e/test-app/: Dockerfile  app.py
e2e/tests/: e2e.rs
examples/sequential-bgd/: 00-prereqs.yaml  01-base.yaml  01-bootstrap-from-empty-bgd.yaml  02-upgrade-bgd.yaml  02-upgrade.yaml  03-trigger-upgrade-tests.yaml  04-failing-upgrade-bgd.yaml  05-trigger-failing-tests.yaml  README.md  cleanup.sh  operator-values.yaml  reset.sh  setup.sh
examples/sequential-bgd/app/: Dockerfile  app.py
examples/sequential-bgd/crds/: inception_plugin.yaml  state_store.yaml
examples/sequential-bgd/producer/: Dockerfile  producer.py
examples/sequential-bgd/sink/: Dockerfile  sink.py
examples/sequential-bgd/verifier/: Dockerfile  verifier.py
operator/: Cargo.toml
operator/src/: builtin_plugins.rs  controller.rs  crd_gen.rs  evaluator.rs  http_api.rs  inception.rs  lib.rs  main.rs  validation.rs
operator/src/controller/: deployments.rs  lease.rs  plugin_lifecycle.rs  promotion.rs  resources.rs  status.rs  tests.rs
operator/src/controller/phases/: draining.rs  inception.rs  mod.rs  rollout.rs  traffic.rs
operator/src/crd/: blue_green.rs  inception_plugin.rs  mod.rs  state_store.rs
operator/src/plugins/: fields.rs  filter.rs  mod.rs  reconciler.rs  schema.rs  selector.rs  template.rs
operator/src/state_store/: azure_identity.rs  cosmos.rs  memory.rs  mod.rs  postgres.rs
operator/src/strategy/: hard_switch.rs  mod.rs  progressive.rs
plugins/azure_servicebus/: Cargo.toml  Dockerfile
plugins/azure_servicebus/src/: assignments.rs  combiner.rs  config.rs  filtering.rs  input.rs  lifecycle.rs  main.rs  manager.rs  servicebus.rs  writer.rs
plugins/http/: Cargo.toml  Dockerfile
plugins/http/src/: config.rs  filters.rs  handlers.rs  main.rs  state.rs
plugins/http_proxy/: Cargo.toml
plugins/http_proxy/src/: main.rs
plugins/http_writer/: Cargo.toml
plugins/http_writer/src/: main.rs
plugins/rabbitmq/: Cargo.toml  Dockerfile
plugins/rabbitmq/src/: amqp.rs  assignments.rs  combiner.rs  config.rs  filtering.rs  input.rs  lifecycle.rs  main.rs  management.rs  manager.rs  writer.rs
plugins/rabbitmq_duplicator/: Cargo.toml
plugins/rabbitmq_duplicator/src/: main.rs
plugins/rabbitmq_writer/: Cargo.toml
plugins/rabbitmq_writer/src/: main.rs
scripts/: build-example-images.sh  build-images.sh  build-linux-binaries.sh
sdk/rust/: Cargo.toml
sdk/rust/src/: auth.rs  config.rs  fields.rs  http.rs  lib.rs  models.rs  notify.rs  resources.rs  routing.rs  runtime.rs  version.rs
sdk/spec/: README.md  crd-versions.yaml  plugin-api-v1alpha1.openapi.yaml
testenv/: kind-config.yaml  postgres.yaml  rabbitmq.yaml
