[workspace]
members = [
    "sdk/rust",
    "operator",
    "plugins/http",
    "plugins/rabbitmq",
]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[workspace.dependencies]
kube = { version = "3.1.0", features = ["runtime", "derive"] }
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
schemars = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
thiserror = "2"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "chrono"] }
async-trait = "0.1"
axum = "0.8"
reqwest = { version = "0.12", features = ["json"] }
jsonschema = "0.30"
regex = "1"
jsonpath-rust = "1"
lapin = "2"
serde_yaml_ng = "0.10"
futures-lite = "2"
rand = "0.9"
futures = "0.3"
sha2 = "0.10"
