[package]
name = "fluidbg-e2e-tests"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde_json.workspace = true
serde.workspace = true
serde_yaml_ng.workspace = true
reqwest = { workspace = true, features = ["blocking", "json"] }
base64.workspace = true
kube.workspace = true
k8s-openapi.workspace = true
tokio.workspace = true
fluidbg-operator = { path = "../operator" }
