[package]
name = "fluidbg-azure-servicebus"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluidbg-plugin-sdk = { path = "../../sdk/rust" }
anyhow = { workspace = true }
axum = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
sha2 = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
