[package]
name = "fluidbg-http"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
fluidbg-plugin-sdk = { path = "../../sdk/rust" }
anyhow.workspace = true
axum.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
