[package]
name = "fluidbg-rabbitmq-duplicator"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml_ng = { workspace = true }
anyhow = { workspace = true }
lapin = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
futures-lite = { workspace = true }
rand = { workspace = true }
